--- a/index.html
+++ b/index.html
@@ -2,9 +2,33 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<title>Group Trivia Game</title>
+
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	
+	<script src="https://code.jquery.com/jquery-2.2.4.js"   integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI="   crossorigin="anonymous"></script>
 </head>
 <body>
-	
+	<div class="container">
+		<h1 class="text-center" id="gameHeader">Totally Trivial Trivia!</h1>
+		<p id="timeRemaining">Time Remaining: 28 seconds</p>
+		<p id="question1">What was the first full-length CGI movie?</p>
+		<ul>
+			<li>A Bug's Life</li>
+			<li>Monsters Inc</li>
+			<li>Toy Story</li>
+			<li>The Lion King</li>
+		</ul>
+		<p id="question2"></p>
+		<p id="answers2"></p>
+		<p id="question3"></p>
+		<p id="answers4"></p>
+	</div>
+
+	<script src='assets/javascript/app.js'></script>
 </body>
 </html>
