Stefans - Set Up

--- a/index.html
+++ b/index.html
@@ -1,10 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
+	<!-- Required meta tags always come first -->
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+	<meta http-equiv="x-ua-compatible" content="ie=edge" />
+
+	<!-- CSS Reset -->
+	<link rel="stylesheet" href="assets/css/reset.css" media="screen" title="no title" />
+
+	<!-- Normalize CSS -->
+	<link rel="stylesheet" href="assets/css/normalize.css" media="screen" title="no title" />
+
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous" />
+
+	<!-- My Styles -->
+	<link rel="stylesheet" href="assets/css/style.css" media="screen" title="no title" />
+
+	<title>Basic Trivia Game</title>
 </head>
 <body>
-	
+
+<div class="container">
+
+	<div class="jumbotron">
+
+		<h1>Totally Trivial Trivia</h1>
+
+		<br>
+
+		<p id="timeRemaining">Time Remaining:</p>
+
+		<p id="firstCGIMovie">What is the first full length CGI movie?</p>
+
+		<p id="spiceGirls">Which of these is NOT a name of the spice girls?</p>
+
+		<p id="NBATitles">Which NBA team won the most titles in the 90s?</p>
+
+		<div class="btn-group" data-toggle="buttons">
+  <label class="btn btn-primary">
+    <input type="radio" name="options" id="option1" autocomplete="off" checked> Radio 1 (preselected)
+  </label>
+  <label class="btn btn-primary">
+    <input type="radio" name="options" id="option2" autocomplete="off"> Radio 2
+  </label>
+  <label class="btn btn-primary">
+    <input type="radio" name="options" id="option3" autocomplete="off"> Radio 3
+  </label>
+</div>
+
+	</div>
+
+</div>
+
 </body>
 </html>
