--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 </head>
 <body>
 
+<!-- Begin Body -->
 <div class="container">
 
 	<div class="jumbotron">
@@ -48,9 +49,8 @@
 
 </div>
 
-
-
-	<script src="assets/javascript/app.js">	</script>
+<!-- Begin Javascript -->
+<script src="assets/javascript/app.js"></script>
 
 </body>
 </html>
