--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
 		<p id="answers4"></p>
 	</div>
 
-	<script src='assets/javascript/app.js'></script>
+	<script src="assets/javascript/app.js"></script>
 </body>
 </html>
